# upvotes

./: .gitignore  Cargo.toml  baseJson.json  process_audio.mjs  process_audio2.mjs
editor/: main.tsx  package.json  words.json
editor/.rsw/paths/: editor-bridge
editor/editor-bridge/: Cargo.toml  lib.rs
media/: 5-001.mp3.vtt  5-001.mp3.word.vtt  5-002.mp3.vtt  5-002.mp3.word.vtt  5-003.mp3.vtt  5-003.mp3.word.vtt  5-004.mp3.vtt  5-004.mp3.word.vtt  5-005.mp3.vtt  5-005.mp3.word.vtt  7-001.mp3.vtt  7-001.mp3.word.vtt  7-002.mp3.vtt  7-002.mp3.word.vtt  7-003.mp3.vtt  7-003.mp3.word.vtt  7-004.mp3.vtt  7-004.mp3.word.vtt  7-005.mp3.vtt  7-005.mp3.word.vtt  7-006.mp3.vtt  7-006.mp3.word.vtt
src/: bubble.rs  lib.rs  main.rs  post.rs  shared.rs  title.rs  upvotes_video.rs
