[package]
name = "hello-world-editor-bridge"
version = "0.1.0"
authors = ["Dmitriy Kovalenko <dmtr.kovalenko@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
fframes-editor-controller = { path = "../../../fframes/fframes-editor-controller" }
hello-world-example = { path = "../../" }
fframes = { path = "../../../fframes/fframes" }